fixed home wave on mobile

--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -76,7 +76,7 @@ form input:focus {
     position: relative;
     text-align: center;
     overflow: hidden;
-    margin-bottom: -214px;
+    margin-bottom: -354px;
 }
 
 .wave-container>svg {
