--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -14,7 +14,7 @@
         vertical-align: middle;
         color: #fff;
         font-weight: 500;
-        line-height: 1.2;
+        // line-height: 1.2;
     }
 
     &-arrow {
@@ -42,6 +42,7 @@
     padding-top: 40px;
     padding-left: 20px;
     display: inline-block;
+    // margin-bottom: 25px
 }
 
 @media (max-width: 780px) {
@@ -76,17 +77,17 @@
     }
 }
 
-@media (max-width: 440px) {
-    .home {
-        .wave-container {
-            bottom: -90px;
-        }
-    }
-}
+// @media (max-width: 440px) {
+    //     .home {
+    //         .wave-container {
+    //             bottom: -90px;
+    //         }
+    //     }
+    // }
 
-@media (max-width: 376px) {
+    // @media (max-width: 376px) {
 
-    .home .wave-container {
-        bottom: -210px;
-    }
-}
+    //     .home .wave-container {
+    //         bottom: -210px;
+    //     }
+    // }
